# maven-dependency-families

./: .gitignore  README.md
bundleimport/: pom.xml
bundleimport/src/main/java/net/w_graj/bundleimport/: BundleImport.java
cluster/: pom.xml
cluster/src/main/java/net/w_graj/cluster/: Cluster.java
connected-components/: pom.xml
connected-components/src/main/java/net/w_graj/connected_components/: ConnectedComponents.java
dependencies/: pom.xml
dependencies/src/main/java/net/w_graj/dependencies/: Dependencies.java
detect/: pom.xml
detect/src/main/java/net/w_graj/detect/: Detect.java
lucene-csv-export/: pom.xml
lucene-csv-export/src/main/java/net/w_graj/luceneexport/: LuceneToCSV.java
plotter/: cleanup.sh  pyproject.toml
plotter/plotter/: __main__.py
scraper/: Cargo.toml
scraper/src/: main.rs
sql/: analyze.sql  import_1.sql  import_2.sql  import_3.sql  import_4.sql  import_5.sql  import_6.sql  import_7.sql
version_analyzer/: Cargo.toml
version_analyzer/src/: main.rs
versioncheck/: pom.xml
versioncheck/src/main/java/net/w_graj/versioncheck/: VersionCheck.java
