[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plotter"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pandas-stubs",
    "pylsp-mypy",
    "pylsp-rope",
    "python-lsp-isort",
    "python-lsp-server[all]"
]

[tool.pydocstyle]
ignore = ["D100", "D101", "D102", "D103", "D107", "D205", "D208", "D212", "D400", "D415"]
