[package]
name = "scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.0"
async-channel = "2.3.0"
dotenvy = "0.15.0"
futures-util = "0.3.0"
reqwest = "0.12.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "derive"] }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.0"
tracing-subscriber = "0.3.0"
indicatif = "0.17.0"
url = "2.5.0"
