[package]
name = "scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-channel = "2.3"
dotenvy = "0.15"
futures-util = "0.3"
indicatif = "0.17"
reqwest = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "derive"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
